--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "fansi"
 version = "0.1.0"
 description = "A Python library that makes formatting terminal printouts easy."
 readme = "README.md"
-homepage = "https://github.com/drivasperez/fansi/
+homepage = "https://github.com/drivasperez/fansi/"
 authors = ["Daniel Rivas Perez <drivas12@googlemail.com>"]
 
 [tool.poetry.dependencies]
