--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fansi"
-version = "0.1.2"
+version = "0.1.3"
 description = "A Python library that makes formatting, colouring and adding emojis to terminal printouts easy."
 readme = "README.md"
 homepage = "https://github.com/drivasperez/fansi/"
@@ -8,6 +8,7 @@ authors = ["Daniel Rivas Perez <drivas12@googlemail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.0"
+colorama = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
